--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,9 @@ server:
   tomcat:
     connection-timeout: 10000
 #?????
+
+
+
 logging:
   level:
     reactor:
@@ -15,6 +18,16 @@ logging:
         cloud:
           gateway: TRACE
 spring:
+  datasource:
+    dynamic:
+      primary: master #设置默认的数据源或者数据源组,默认值即为master
+      strict: false #严格匹配数据源,默认false. true未匹配到指定数据源时抛异常,false使用默认数据源
+      datasource:
+        master:
+          url: jdbc:mysql://192.168.0.110:3306/db_order_0
+          username: root
+          password: 123456
+          driver-class-name: com.mysql.jdbc.Driver # 3.2.0开始支持SPI可省略此配置
   cloud:
     gateway:
       httpclient:
